@@ -1,4 +1,11 @@
 2014-05-22	SilverNexus
+	* settings.h: Add search_string to settings so fewer variables go on the stack during recursion.
+	* settings.c: Initialized search string to 0 in init_settings().
+	* parseArgs.c: Added parsing for -s and --search flags.
+	* main.h: Update function headers for extraction of search string.
+	* main.c: Update function calls to reflect addition of search string to settings.
+
+2014-05-22	SilverNexus
 	* main.c: Fix bug in which a folder without a trailing "/" as the search directory would crash the program.
 
 2014-05-22	SilverNexus
